MB-23550: return NULL from initScanContext() on failure

The callers of this function treat a NULL return value as an error
(which is handled), however we currenlty throw an exception from it on
error, which isn't caught. Change to use the same method of
propagating the failure and simply return NULL (after logging the
failure).

Change-Id: I7fd7b6cff0cffee45d05ad365bc0e9e73efafd14
Reviewed-on: http://review.couchbase.org/75785
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>